revise to word-break for tweet p tags - text wraps correctly

--- a/sass/tweets.scss
+++ b/sass/tweets.scss
@@ -57,7 +57,7 @@ article {
     p {
       margin: 0 8px;
       padding: 8px 0;
-      word-wrap: break-word;
+      word-break: break-all;
     }
   }
 
